updated architecture documentation and AI agents documentation